<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrudRegistrar"
    android:background="@drawable/fondop">


    /Logo

    <ImageView
        android:id="@+id/icon_logo"
        android:layout_width="260dp"
        android:layout_height="160dp"
        android:src="@drawable/iconlogo"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <EditText
        android:id="@+id/editText_CrudID"
        style="@style/AppTheme.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:hint="@string/app_VehiculoID"
        app:backgroundTint="@color/colorBlanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/icon_logo" />

    <EditText
        android:id="@+id/editText_CrudDueño"
        style="@style/AppTheme.EditText"
        android:hint="@string/app_Propietario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:backgroundTint="@color/colorBlanco"
        app:layout_constraintTop_toTopOf="@+id/editText_CrudID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        />


    <EditText
        android:id="@+id/editText_CrudPatente"
        style="@style/AppTheme.EditText"
        android:hint="@string/app_Patente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:backgroundTint="@color/colorBlanco"
        app:layout_constraintTop_toTopOf="@+id/editText_CrudDueño"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        />

    <EditText
        android:id="@+id/editText_CrudFecha"
        style="@style/AppTheme.EditText"
        android:hint="@string/app_Fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:backgroundTint="@color/colorBlanco"
        app:layout_constraintTop_toTopOf="@+id/editText_CrudPatente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        />

    //Boton de Registrar Vehiculo
    <Button
        android:id="@+id/ButtonGuardarCrud"
        android:text="@string/app_btt_Registrar"
        style="@style/AppTheme.Button"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_CrudFecha"
        app:layout_constraintVertical_bias="0.0"

        android:onClick="RegistarVehiculo"
        />

    //Boton de Cancelar

    <Button
        android:id="@+id/ButtonCancelar"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_style"
        android:onClick="Cancelar"


        android:text="@string/app_cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonGuardarCrud"

        app:layout_constraintVertical_bias="0.0"
        />


</androidx.constraintlayout.widget.ConstraintLayout>