<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Crudbuscar"
    android:background="@drawable/fondop"
    >

    /Logo

    //Ingresar Id

    <ImageView
        android:id="@+id/icon_logo"
        android:layout_width="260dp"
        android:layout_height="160dp"
        android:src="@drawable/iconlogo"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    //Boton de buscar Vehiculo

    <EditText
        android:id="@+id/edtDetalle_id"
        style="@style/AppTheme.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/app_Buscar_ID"
        app:backgroundTint="@color/colorBlanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_logo" />

    <Button
        android:id="@+id/btt_buscar_vehiculoID"
        android:text="@string/app_btt_Buscar"
        style="@style/AppTheme.Button"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDetalle_id"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="BuscarVehiculo"
        />
    //Boton de Cancelar
    <Button
        android:id="@+id/ButtonCancelar"
        android:text="@string/app_cancelar"
        style="@style/AppTheme.Button"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style"
        android:onClick="Cancelar"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btt_buscar_vehiculoID"
        app:layout_constraintVertical_bias="0.0"

        />

    // Muestra datos

    // Muestra datos

    // Muestra datos

    <TextView
        android:id="@+id/txtDetalle_propietario"
        style="@style/AppTheme.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_Buscar_Propietario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonCancelar"
        app:layout_constraintVertical_bias="0.223" />

    <TextView
        android:id="@+id/txtDetalle_patente"
        style="@style/AppTheme.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_Buscar_Patente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDetalle_propietario"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/txtDetalle_fecha"
        style="@style/AppTheme.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_Buscar_Fecha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDetalle_patente"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>